# tld-parser-rs

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  lib.rs  name_record_handler.rs  pda.rs  utils.rs
src/state/: main_domain.rs  mod.rs  name_record_header.rs  nft_record.rs
src/types/: mod.rs  records.rs
tests/: all_lib_functions.rs
