[package]
name = "tldparser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
borsh = "0.9.3"
solana-account-decoder = "1.14.12"
solana-client = "1.14.12"
solana-sdk = "1.14.12"
tokio = "1.24.1"
