[package]
name = "tldparser"
version = "0.1.0"
edition = "2021"
description = "AllDomains (ANS) Protocol rust client tld parser"
authors = ["Miester <crypt0miester@gmail.com>"]
repository = "https://github.com/onsol-labs/tld-parser-rs"
readme = "README.md"
license = "MIT"

[dependencies]
anchor-client = "^0.26.0"
anchor-lang = "^0.26.0"
borsh = "0.9.3"
serde = "1.0.152"
serde_json = "1.0.93"
solana-account-decoder = "^1.14"
solana-client = "^1.14"
solana-sdk = "^1.14"
tokio = "1.24.1"
spl-token-2022 ="^0.9.0"